[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sl-replies-exporter"
version = "0.1.0"
description = "Smartlead Master Inbox replies to CSV exporter (async, rate-limited)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "tenacity>=8.3",
    "rich>=13.7",
    "beautifulsoup4>=4.12",
]

[project.scripts]
sl-replies-export = "export_smartlead_inbox_to_csv:main"

[tool.pyright]
pythonVersion = "3.11"
